--- a/sass_vivo/scss/style.scss
+++ b/sass_vivo/scss/style.scss
@@ -3,13 +3,13 @@
 @import "./mixins";
 @import "./estilosgenerales";
 @import "./layout/header";
-@import "./layout/mainindex";
 @import "./layout/footer";
+@import "./layout/mainindex";
 @import "./layout/sobremi";
-@import "./componentes/encuesta";
+@import "./layout/experiencia";
+@import "./layout/clientes";
 @import "./componentes/iconowa";
 @import "./componentes/formulario";
-@import "./componentes/carousel";
 @import "./mediaquerie";
 
 
