--- a/sass_vivo/scss/componentes/_formulario.scss
+++ b/sass_vivo/scss/componentes/_formulario.scss
@@ -1,7 +1,12 @@
-main{
+.contactame{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top:5%;
     h1{
         font-family:'Poppins', sans-serif;
-        font-size: 2rem;
+        font-size: 1.6rem;
     }
     div {
         .formulario{
@@ -75,11 +80,10 @@ main{
         }
     }     
     section{
-    margin-top: 20px;
-        h2{
-            font-family:$font-principal;
-            font-size: 2rem;
-            width:1000px
+    margin-top: 5%;    
+    text-align: center;   
+        h2{          
+            font-size: 1.4rem;
         }
         .mapa{
             border-radius: 20px;
