--- a/sass_vivo/scss/layout/_header.scss
+++ b/sass_vivo/scss/layout/_header.scss
@@ -13,7 +13,7 @@ header{
             }
             div select{
                 background-color: rgba(113, 206, 82, 0.089);
-                margin-left: 1200%;
+                float: right;
             }
             .navbar-nav a{
                 display: flex;
