--- a/sass_vivo/scss/layout/_sobremi.scss
+++ b/sass_vivo/scss/layout/_sobremi.scss
@@ -1,32 +1,41 @@
-main{
-    div{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        width: 100%;
-        h1{
-            flex-direction: column;    
-        }
-    }    
-    section {
-        p{
-            width:500px;
-            font-family:$font-principal;
-        }    
-    }
-    section{
-        @include flex-direction-center($column);
-        ul{
-            @include flex-direction-center($column);
-            li{
-                display: flex;
-                margin-top: 30px;  
-                      
-                img{
-                    width: 40px;
-                    margin-left: 20px;
+.secundario{
+    grid-area: main;
+    display: flex;
+    flex-direction: column;
+    margin-top: 5%;
+        .sobremiContenido{
+            display: flex;
+            flex-direction:row;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+                .presentacionDos {
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: center;
+                    align-items: center;
+                    width:500px;
+                    font-family:$font-principal;  
+                    font-size: 1.2rem;
+                    margin-right: 10%  
                 }
-            }
+                .habilidad{
+                    @include flex-direction-center($column);
+                    ul{
+                            @include flex-direction-center($column);
+                            .progress{
+                                width: 100%;
+                            }
+                            li{
+                                display: flex;
+                                margin-top: 30px;  
+                                    
+                                img{
+                                    width: 40px;
+                                    margin-left: 20px;
+                                }
+                            }
+                        }      
+                } 
         }
-    }
 }
