--- a/css/estilos.css
+++ b/css/estilos.css
@@ -178,7 +178,7 @@ ul {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-top: 6%; }
+    margin-top: 50px; }
     .secundario .arquitectura h4 {
       background-color: rgba(29, 32, 32, 0.144);
       border-radius: 80px 20px;
@@ -186,25 +186,23 @@ ul {
       height: auto;
       padding-left: 50px;
       padding-right: 50px;
-      height: max-content;
-      margin-bottom: 3%; }
+      margin-bottom: 0%; }
     .secundario .arquitectura .planos {
       display: flex;
       flex-direction: column;
-      width: 100%; }
+      width: 100%;
+      margin-top: 0%; }
       .secundario .arquitectura .planos .detalle {
         display: flex;
         flex-direction: row;
-        justify-content: space-around;
-        margin-top: 5%; }
-        .secundario .arquitectura .planos .detalle .velerosm {
-          display: none; }
+        justify-content: space-around; }
         .secundario .arquitectura .planos .detalle .velero {
           display: inline-block;
           box-shadow: 0px 3px 5px #0f0f0f;
           position: relative;
           cursor: pointer;
-          overflow: hidden; }
+          overflow: hidden;
+          margin-top: 50px; }
           .secundario .arquitectura .planos .detalle .velero::before {
             content: "Constructivo Velero";
             bottom: 0;
@@ -229,7 +227,8 @@ ul {
           position: relative;
           box-shadow: 0px 3px 5px #0f0f0f;
           cursor: pointer;
-          overflow: hidden; }
+          overflow: hidden;
+          margin-top: 50px; }
           .secundario .arquitectura .planos .detalle .timon::before {
             content: "Plano Timon";
             position: absolute;
@@ -253,13 +252,14 @@ ul {
         display: flex;
         flex-direction: row;
         justify-content: space-around;
-        margin-top: 5%; }
+        margin-top: 0%; }
         .secundario .arquitectura .planos .refuerzos .quillote {
           display: inline-block;
           position: relative;
           box-shadow: 0px 3px 5px #0f0f0f;
           cursor: pointer;
-          overflow: hidden; }
+          overflow: hidden;
+          margin-top: 50px; }
           .secundario .arquitectura .planos .refuerzos .quillote::before {
             content: "Plano Quillote";
             position: absolute;
@@ -284,7 +284,8 @@ ul {
           position: relative;
           cursor: pointer;
           box-shadow: 0px 3px 5px #0f0f0f;
-          overflow: hidden; }
+          overflow: hidden;
+          margin-top: 50px; }
           .secundario .arquitectura .planos .refuerzos .varengas::before {
             content: "Plano Vargengas";
             position: absolute;
