--- a/scss/layout/_sobremi.scss
+++ b/scss/layout/_sobremi.scss
@@ -49,30 +49,30 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            margin-top: 6% ;
+            margin-top: 50px;
             h4{
-                @include title;              
-                height: max-content;    
-                margin-bottom: 3%;            
+                @include title;
+                margin-bottom: 0%;            
+                   
+                          
             }
             .planos{
                 display: flex;
                 flex-direction: column;
                 width: 100%;
+                margin-top: 0%;
                 .detalle{
                     display: flex;
                     flex-direction: row;
                     justify-content: space-around;
-                    margin-top: 5%; 
-                    .velerosm{
-                        display: none;
-                    }                   
+                                                       
                     .velero{
                         display: inline-block;
                         box-shadow: 0px 3px 5px rgb(15, 15, 15);
                         position: relative;
                         cursor: pointer;
                         overflow: hidden;
+                        margin-top: 50px; 
                         &::before{
                             content:"Constructivo Velero";
                             bottom:0;
@@ -101,6 +101,7 @@
                     box-shadow: 0px 3px 5px rgb(15, 15, 15);
                     cursor: pointer;
                     overflow: hidden;
+                    margin-top:50px; 
                     &::before{
                         content:"Plano Timon";
                         position:absolute;
@@ -128,13 +129,16 @@
                     display: flex;
                     flex-direction: row;
                     justify-content: space-around;
-                    margin-top: 5%;
+                    margin-top: 0%;
+
+                    
                     .quillote{
                             display: inline-block;
                             position: relative;
                             box-shadow: 0px 3px 5px rgb(15, 15, 15);
                             cursor: pointer;
                             overflow: hidden;
+                            margin-top: 50px; 
                             &::before{
                                 content:"Plano Quillote";
                                 position:absolute;
@@ -163,6 +167,7 @@
                         cursor: pointer;
                         box-shadow: 0px 3px 5px rgb(15, 15, 15);
                         overflow: hidden;
+                        margin-top: 50px; 
                         &::before{
                             content:"Plano Vargengas";
                             position:absolute;
